1) added missing unary negate math operator
2) bugfix and AST nodes hierarchy cleaning:
   ASTBinaryOperator <--- ASTMathOperator <--- ASTAddNode, ASTSubstractNode, ...
                     <--- ASTComparisonOperator <--- ASTLTNode, ASTLENode, ...
                     <--- ASTLogicalOperator <--- ASTAndNode, ASTOrNode

The ASTBinaryOperator defines the new abstract method getLiteralOperator(), which returns the string representing the operator. It is used when calculating the error message which is displayed whenever something goes wrong (since at runtime tokens are freed to reduce memory usage, arithmetic errors where sometimes throwing NPEs before this reeng)

3) test cases for 1) and 2)




git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@1763913 13f79535-47bb-0310-9956-ffa450edef68